se atrapan correctamente las excepciones